--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ build = "build.py"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+sqlitedict = "^1.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
