WIP: Add toml11 dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,6 +256,7 @@ target_include_directories(mmseqs_native PUBLIC src/mmseqs_native/src/linclust)
 target_include_directories(mmseqs_native PUBLIC src/mmseqs_native/src/taxonomy)
 target_include_directories(mmseqs_native PUBLIC src/mmseqs_native/src/util)
 target_include_directories(mmseqs_native PUBLIC src/mmseqs_native/src)
+target_include_directories(mmseqs_native PUBLIC lib/toml11)
 target_include_directories(mmseqs_native PUBLIC lib/cppfs/source/cppfs/include)
 get_target_property(COMPILE_TMP mmseqs-framework COMPILE_FLAGS)
 get_target_property(LINK_TMP mmseqs-framework LINK_FLAGS)
