--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,5 +63,5 @@ pyflakes = ["+*", "-E203"]
 pylint = ["+*", "-E203"]
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0"]
+requires = ["setuptools", "poetry-core>=1.0.0", "wheel", "cmake>=3.12"]
 build-backend = "poetry.core.masonry.api"
