Skip SSE2 missing error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ if (NATIVE_ARCH AND (MMSEQS_ARCH STREQUAL ""))
         include(CheckSSEFeatures)
         if (NOT HAVE_SSE4_1_EXTENSIONS)
             if (NOT HAVE_SSE2_EXTENSIONS)
-                message(FATAL_ERROR "At least SSE2 is needed to compile")
+                message(WARNING "At least SSE2 is needed to compile")
             endif ()
             message(WARNING "At least SSE4.1 is needed for best performance")
         endif ()
