--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
         name: Install Python
         with:
           python-version: '3.8'
+          architecture: 'x64'
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.8.0
