WIP: Fix zstd pic flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 add_compile_options(-g)
@@ -245,7 +246,6 @@ file(GLOB BINDINGS_COMMON_SRCS "src/mmseqs_native/src/commons/*.cpp"
 add_subdirectory(lib/pybind11)
 pybind11_add_module(mmseqs_native ${SOURCES} "${SOURCE_DIR}/bindings.cpp" ${BINDINGS_COMMON_SRCS})
 #set_target_properties(mmseqs_native PROPERTIES LINK_FLAGS "-Wl,-undefined,error")
-target_compile_options(mmseqs_native PRIVATE -fPIC)
 target_include_directories(mmseqs_native PUBLIC ${CMAKE_BINARY_DIR}/generated)
 target_include_directories(mmseqs_native PUBLIC ${PROJECT_BINARY_DIR}/generated)
 target_include_directories(mmseqs_native PUBLIC src/mmseqs_native/src/alignment)
