--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: "cp27-* pp27-* cp35-* pp35-* cp36-* pp36-* cp37-* pp37-*"  # skip Python 2.7 wheels
-          MMSEQ_CMAKE_GENERATOR: "MinGW Makefiles"
+          MMSEQ_CMAKE_GENERATOR: "Visual Studio 16 2019 Win32"
 
       - uses: actions/upload-artifact@v2
         with:
