--- a/src/mmseqs_native/src/mmseqs/commons/CMakeLists.txt
+++ b/src/mmseqs_native/src/mmseqs/commons/CMakeLists.txt
@@ -1,75 +1,74 @@
 set(commons_header_files
-        mmseqs/commons/A3MReader.h
-        mmseqs/commons/AminoAcidLookupTables.h
-        mmseqs/commons/BacktraceTranslator.h
-        mmseqs/commons/ByteParser.h
-        mmseqs/commons/Command.h
-        mmseqs/commons/CommandCaller.h
-        mmseqs/commons/Concat.h
-        mmseqs/commons/DBConcat.h
-        mmseqs/commons/DBReader.h
-        mmseqs/commons/DBWriter.h
-        mmseqs/commons/IntervalArray.h
-        mmseqs/commons/Debug.h
-        mmseqs/commons/Domain.h
-        mmseqs/commons/ExpressionParser.h
-        mmseqs/commons/FileUtil.h
-        mmseqs/commons/HeaderSummarizer.h
-        mmseqs/commons/IndexReader.h
+        mmseqs/commons/a3MReader.h
+        mmseqs/commons/aminoAcidLookupTables.h
+        mmseqs/commons/backtraceTranslator.h
+        mmseqs/commons/byteParser.h
+        mmseqs/commons/command.h
+        mmseqs/commons/commandCaller.h
+        mmseqs/commons/concat.h
+        mmseqs/commons/dBConcat.h
+        mmseqs/commons/dBReader.h
+        mmseqs/commons/dBWriter.h
+        mmseqs/commons/intervalArray.h
+        mmseqs/commons/domain.h
+        mmseqs/commons/expressionParser.h
+        mmseqs/commons/fileUtil.h
+        mmseqs/commons/headerSummarizer.h
+        mmseqs/commons/indexReader.h
         mmseqs/commons/itoa.h
-        mmseqs/commons/KSeqBufferReader.h
-        mmseqs/commons/KSeqWrapper.h
-        mmseqs/commons/MathUtil.h
-        mmseqs/commons/MemoryMapped.h
-        mmseqs/commons/MemoryTracker.h
-        mmseqs/commons/MMseqsMPI.h
-        mmseqs/commons/MultiParam.h
-        mmseqs/commons/NucleotideMatrix.h
-        mmseqs/commons/Orf.h
-        mmseqs/commons/ProfileStates.h
-        mmseqs/commons/LibraryReader.h
-        mmseqs/commons/Parameters.h
-        mmseqs/commons/PatternCompiler.h
-        mmseqs/commons/ScoreMatrix.h
-        mmseqs/commons/Sequence.h
-        mmseqs/commons/StringBlock.h
-        mmseqs/commons/SubstitutionMatrix.h
-        mmseqs/commons/SubstitutionMatrixProfileStates.h
+        mmseqs/commons/kSeqBufferReader.h
+        mmseqs/commons/kSeqWrapper.h
+        mmseqs/commons/mathUtil.h
+        mmseqs/commons/memoryMapped.h
+        mmseqs/commons/memoryTracker.h
+        mmseqs/commons/mMseqsMPI.h
+        mmseqs/commons/multiParam.h
+        mmseqs/commons/nucleotideMatrix.h
+        mmseqs/commons/orf.h
+        mmseqs/commons/alloc.h
+        mmseqs/commons/profileStates.h
+        mmseqs/commons/libraryReader.h
+        mmseqs/commons/parameters.h
+        mmseqs/commons/patternCompiler.h
+        mmseqs/commons/scoreMatrix.h
+        mmseqs/commons/sequence.h
+        mmseqs/commons/stringBlock.h
+        mmseqs/commons/substitutionMatrix.h
+        mmseqs/commons/substitutionMatrixProfileStates.h
         mmseqs/commons/tantan.h
-        mmseqs/commons/TranslateNucl.h
-        mmseqs/commons/Timer.h
-        mmseqs/commons/UniprotKB.h
-        mmseqs/commons/Util.h
+        mmseqs/commons/translateNucl.h
+        mmseqs/commons/timer.h
+        mmseqs/commons/uniprotKB.h
+        mmseqs/commons/util.h
         PARENT_SCOPE
         )
 
 set(commons_source_files
-        mmseqs/commons/A3MReader.cpp
-        mmseqs/commons/Application.cpp
-        mmseqs/commons/BaseMatrix.cpp
-        mmseqs/commons/Command.cpp
-        mmseqs/commons/CommandCaller.cpp
-        mmseqs/commons/DBConcat.cpp
-        mmseqs/commons/DBReader.cpp
-        mmseqs/commons/DBWriter.cpp
-        mmseqs/commons/Debug.cpp
-        mmseqs/commons/ExpressionParser.cpp
-        mmseqs/commons/FileUtil.cpp
-        mmseqs/commons/HeaderSummarizer.cpp
-        mmseqs/commons/KSeqWrapper.cpp
-        mmseqs/commons/MemoryMapped.cpp
-        mmseqs/commons/MemoryTracker.cpp
-        mmseqs/commons/MMseqsMPI.cpp
-        mmseqs/commons/MultiParam.cpp
-        mmseqs/commons/NucleotideMatrix.cpp
-        mmseqs/commons/Orf.cpp
-        mmseqs/commons/Parameters.cpp
-        mmseqs/commons/ProfileStates.cpp
-        mmseqs/commons/LibraryReader.cpp
-        mmseqs/commons/Sequence.cpp
-        mmseqs/commons/SubstitutionMatrix.cpp
+        mmseqs/commons/a3MReader.cpp
+        mmseqs/commons/application.cpp
+        mmseqs/commons/baseMatrix.cpp
+        mmseqs/commons/command.cpp
+        mmseqs/commons/commandCaller.cpp
+        mmseqs/commons/dBConcat.cpp
+        mmseqs/commons/dBReader.cpp
+        mmseqs/commons/dBWriter.cpp
+        mmseqs/commons/expressionParser.cpp
+        mmseqs/commons/fileUtil.cpp
+        mmseqs/commons/headerSummarizer.cpp
+        mmseqs/commons/kSeqWrapper.cpp
+        mmseqs/commons/memoryMapped.cpp
+        mmseqs/commons/memoryTracker.cpp
+        mmseqs/commons/mMseqsMPI.cpp
+        mmseqs/commons/multiParam.cpp
+        mmseqs/commons/nucleotideMatrix.cpp
+        mmseqs/commons/orf.cpp
+        mmseqs/commons/parameters.cpp
+        mmseqs/commons/profileStates.cpp
+        mmseqs/commons/libraryReader.cpp
+        mmseqs/commons/sequence.cpp
+        mmseqs/commons/substitutionMatrix.cpp
         mmseqs/commons/tantan.cpp
-        mmseqs/commons/UniprotKB.cpp
-        mmseqs/commons/Util.cpp
+        mmseqs/commons/uniprotKB.cpp
+        mmseqs/commons/util.cpp
         PARENT_SCOPE
         )
