--- a/lib/cacode/CMakeLists.txt
+++ b/lib/cacode/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_library(cacode OBJECT
         lambda_calculator.cpp
-        lambda_calculator.h
         lubksb.cpp
         ludcmp.cpp
         nrutil.cpp
-        nrutil.h
+        cacode.h
         )
 set_target_properties(cacode PROPERTIES COMPILE_FLAGS "${MMSEQS_CXX_FLAGS}" LINK_FLAGS "${MMSEQS_CXX_FLAGS}")
