Fix compilation paths

--- a/src/mmseqs_native/src/mmseqs/clustering/CMakeLists.txt
+++ b/src/mmseqs_native/src/mmseqs/clustering/CMakeLists.txt
@@ -1,15 +1,15 @@
 set(clustering_header_files
-        mmseqs/clustering/AlignmentSymmetry.h
-        mmseqs/clustering/Clustering.h
-        mmseqs/clustering/ClusteringAlgorithms.h
-        mmseqs/clustering/Main.cpp
+        mmseqs/clustering/alignmentSymmetry.h
+        mmseqs/clustering/clustering.h
+        mmseqs/clustering/clusteringAlgorithms.h
+        mmseqs/clustering/main.cpp
         PARENT_SCOPE
         )
 
 set(clustering_source_files
-        mmseqs/clustering/AlignmentSymmetry.cpp
-        mmseqs/clustering/Clustering.cpp
-        mmseqs/clustering/ClusteringAlgorithms.cpp
-        mmseqs/clustering/Main.cpp
+        mmseqs/clustering/alignmentSymmetry.cpp
+        mmseqs/clustering/clustering.cpp
+        mmseqs/clustering/clusteringAlgorithms.cpp
+        mmseqs/clustering/main.cpp
         PARENT_SCOPE
         )
