--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macOS-10.15]
+        os: [ubuntu-20.04]
     steps:
       - name: Checkout the project
         uses: actions/checkout@v2
@@ -19,6 +19,15 @@ jobs:
           architecture: 'x64'
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.8.0
+      - name: Cache multiple paths
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/cache
+            !~/cache/exclude
+            build
+            .pytest_cache
+          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
@@ -28,36 +37,3 @@ jobs:
         with:
           name: build_wheels
           path: ./wheelhouse/*.whl
-
-  release:
-    name: Publish release
-    needs: build_wheels
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the project
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        name: Install Python
-        with:
-          python-version: '3.8'
-          architecture: 'x64'
-      - name: Install Poetry
-        uses: snok/install-poetry@v1.1.1
-      - name: Download prebuilt wheels
-        uses: actions/download-artifact@v2
-        with:
-          name: build_wheels
-      - name: Temporarily store all prebuild wheels
-        shell: bash
-        run: mkdir _build_wheels && cp ./*.whl _build_wheels
-      - name: Run poetry build
-        shell: bash
-        run: poetry build
-      - name: Copy all prebuilt wheels
-        shell: bash
-        run: cp ./_build_wheels/* dist
-      - name: Publish a Python distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: styczynski
-          password: ${{ secrets.PYPI_API_TOKEN }}
