--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.8.0
+      - name: Install cibuildwheel and numpy
+        run: python -m pip install cibuildwheel==1.8.0 numpy==1.20.1
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
