--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, macos-11.0, macOS-10.15]
+        os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, macOS-10.15]
     steps:
       - name: Checkout the project
         uses: actions/checkout@v2
@@ -21,8 +21,8 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.8.0
+      - name: Install cibuildwheel and numpy
+        run: python -m pip install cibuildwheel==1.8.0 numpy==1.20.1
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
