WIP: Fixing Python GH build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,18 @@ set(HAVE_POWER8 0 CACHE BOOL "Have POWER8 CPU")
 set(HAVE_ARM8 0 CACHE BOOL "Have ARMv8 CPU")
 set(NATIVE_ARCH 1 CACHE BOOL "Assume native architecture for SIMD. Use one of the HAVE_* options or set CMAKE_CXX_FLAGS to the appropriate flags if you disable this.")
 
-find_package(Python3 REQUIRED COMPONENTS NumPy)
-if (Python3_NumPy_FOUND)
-    message("-- Detected NumPy installation")
+set(Python3_FIND_STRATEGY LOCATION)
+if(defined $ENV{pythonVersion})
+    message("-- Detected pythonVersion env variable. Looking for python ${pythonVersion}")
+    set(Python3_ROOT_DIR ${pythonVersion})
+    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS NumPy)
 else ()
-    message("-- No NumPy")
+    find_package(Python3 REQUIRED COMPONENTS NumPy)
+    if (Python3_NumPy_FOUND)
+        message("-- Detected NumPy installation")
+    else ()
+        message("-- No NumPy")
+    endif ()
 endif ()
 
 if (HAVE_SANITIZER)
