--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_OSX_DEPLOYMENT_TARGET 10.15)
 
+set(Python_ADDITIONAL_VERSIONS 3.8 3.9 3.7 3.6 3.5 3.4 3.2)
+
 set(CMAKE_BUILD_TYPE Debug)
 if (MSVC)
     add_compile_options(/DEBUG:FULL)
