--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: '3.8'
           architecture: 'x64'
       - name: Install cibuildwheel and numpy
-        run: python -m pip install cibuildwheel==1.8.0 numpy==1.20.1
+        run: python3 -m pip install cibuildwheel==1.8.0 numpy==1.20.1
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
@@ -33,7 +33,7 @@ jobs:
             .pytest_cache
           key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: python3 -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: "cp27-* pp27-* cp35-* pp35-* cp36-* pp36-* cp37-* pp37-*"  # skip Python 2.7 wheels
       - name: Upload prebuild wheels
