Try to fix GH build (fix cmake?)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,13 +57,16 @@ set(HAVE_POWER8 0 CACHE BOOL "Have POWER8 CPU")
 set(HAVE_ARM8 0 CACHE BOOL "Have ARMv8 CPU")
 set(NATIVE_ARCH 1 CACHE BOOL "Assume native architecture for SIMD. Use one of the HAVE_* options or set CMAKE_CXX_FLAGS to the appropriate flags if you disable this.")
 
+set(PYTHON_BINDING_PYTHON_VERSION "" CACHE STRING "Python version PYTHON_BINDING will use.")
+set_property(CACHE PYTHON_BINDING_PYTHON_VERSION PROPERTY STRINGS ${Python_ADDITIONAL_VERSIONS})
 set(Python3_FIND_STRATEGY LOCATION)
 if(defined $ENV{pythonVersion})
     message("-- Detected pythonVersion env variable. Looking for python ${pythonVersion}")
     set(Python3_ROOT_DIR ${pythonVersion})
-    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS NumPy)
+    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS Interpreter Development NumPy)
 else ()
-    find_package(Python3 REQUIRED COMPONENTS NumPy)
+    message("-- Looking for Python3")
+    find_package(Python3 ${PYTHON_BINDING_PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development NumPy)
     if (Python3_NumPy_FOUND)
         message("-- Detected NumPy installation")
     else ()
