--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ set(Python3_FIND_STRATEGY LOCATION)
 if(defined $ENV{pythonVersion})
     message("-- Detected pythonVersion env variable. Looking for python ${pythonVersion}")
     set(Python3_ROOT_DIR ${pythonVersion})
-    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS Interpreter Development NumPy)
+    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS Interpreter NumPy)
 else ()
     message("-- Looking for Python3")
     find_package(Python3 ${PYTHON_BINDING_PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development NumPy)
