--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,13 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v1.7
         with:
           cmake-version: '3.19.x'
-      - uses: actions/setup-python@v2
-        name: Install Python
+      - name: Install Python dev packages
+        run: apt-get install python3 python3-setuptools python3-pkg-resources python3-pip python3-dev libffi-dev build-essential git
+      - name: Install python
+        uses: gabrielfalcao/pyenv-action@v5
         with:
-          python-version: '3.8'
-          architecture: 'x64'
-      - name: Install cibuildwheel and numpy
-        run: python3.8 -m pip install cibuildwheel==1.8.0 numpy==1.20.1
+          default: "3.8-dev"
+          command: pip install -U pip numpy==1.20.1 cibuildwheel==1.8.0
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
