--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,12 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v1.7
         with:
           cmake-version: '3.19.x'
-      - name: Install Python dev packages
+      - name: Install Python
         run: sudo apt-get install python3 python3-setuptools python3-pkg-resources python3-pip python3-dev libffi-dev build-essential git
-      - name: Install python
-        uses: gabrielfalcao/pyenv-action@v5
-        with:
-          default: "3.8-dev"
-          command: pip install -U pip numpy==1.20.1 cibuildwheel==1.8.0
+      - name: Install Python packages
+        run: pip install -U pip numpy==1.20.1 cibuildwheel==1.8.0
+      - name: Check Python versions
+        run: printf "> Python version:\n    " && python --version && printf "> Pip version:\n    " && pip --version && printf "> Numpy version:\n    " && python -c "import numpy; print(numpy.version.version)" && printf "> Python interpreter path:\n    " && python -c "import sys; print(sys.executable)"
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
