--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,13 @@ jobs:
       - name: Install Python packages
         run: pip install -U pip numpy==1.20.1 cibuildwheel==1.8.0
       - name: Check Python versions
-        run: printf "> Python version:\n    " && python --version && printf "> Pip version:\n    " && pip --version && printf "> Numpy version:\n    " && python -c "import numpy; print(numpy.version.version)" && printf "> Python interpreter path:\n    " && python -c "import sys; print(sys.executable)"
+        run: |
+          printf "> Python version:\n    " && python --version && \
+          printf "> Pip version:\n    " && pip --version && \
+          printf "> Numpy version:\n    " && python -c "import numpy; print(numpy.version.version)" && \
+          printf "> Python interpreter path:\n    " && python -c "import distutils.sysconfig as sysconfig; print(sysconfig.get_python_inc())" && \
+          printf "> Python interpreter path:\n    " && python -c "import distutils.sysconfig as sysconfig; print(sysconfig.get_config_var('LIBDIR'))" && \
+          printf "> Python interpreter executable:\n    " && python -c "import sys; print(sys.executable)"
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
