--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,14 +45,14 @@ set(HAVE_POWER8 0 CACHE BOOL "Have POWER8 CPU")
 set(HAVE_ARM8 0 CACHE BOOL "Have ARMv8 CPU")
 set(NATIVE_ARCH 1 CACHE BOOL "Assume native architecture for SIMD. Use one of the HAVE_* options or set CMAKE_CXX_FLAGS to the appropriate flags if you disable this.")
 
-set(Python3_FIND_STRATEGY LOCATION)
-if(defined $ENV{pythonVersion})
-    message("-- Detected pythonVersion env variable. Looking for python ${pythonVersion}")
-    set(Python3_ROOT_DIR ${pythonVersion})
-    find_package(Python3 ${pythonVersion} REQUIRED COMPONENTS Interpreter NumPy)
+if(BUILD_PYTHON_VERSION)
+    message("-- Detected BUILD_PYTHON_VERSION parameter. Looking for python ${BUILD_PYTHON_VERSION}")
+    set(Python3_ROOT_DIR ${BUILD_PYTHON_VERSION})
+    find_package(Python3 ${BUILD_PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development NumPy)
 else ()
+    set(Python3_FIND_STRATEGY LOCATION)
     message("-- Looking for Python3")
-    find_package(Python3 "3.8" REQUIRED COMPONENTS Interpreter Development NumPy)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development NumPy)
     if (Python3_NumPy_FOUND)
         message("-- Detected NumPy installation")
     else ()
