--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BEFORE_ALL: bash ./setup_cibuildwheel.sh
+          CIBW_BEFORE_BUILD: bash ./setup_cibuildwheel.sh
           CIBW_SKIP: "cp27-* pp27-* cp35-* pp35-* cp36-* pp36-* cp37-* pp37-*"  # skip Python 2.7 wheels
       - name: Upload prebuild wheels
         uses: actions/upload-artifact@v2
