WIP: Try to fix GH build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,11 +48,11 @@ set(NATIVE_ARCH 1 CACHE BOOL "Assume native architecture for SIMD. Use one of th
 if(BUILD_PYTHON_VERSION)
     message("-- Detected BUILD_PYTHON_VERSION parameter. Looking for python ${BUILD_PYTHON_VERSION}")
     set(Python3_ROOT_DIR ${BUILD_PYTHON_VERSION})
-    find_package(Python3 ${BUILD_PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development NumPy)
+    find_package(Python3 ${BUILD_PYTHON_VERSION} REQUIRED COMPONENTS NumPy)
 else ()
     set(Python3_FIND_STRATEGY LOCATION)
     message("-- Looking for Python3")
-    find_package(Python3 REQUIRED COMPONENTS Interpreter Development NumPy)
+    find_package(Python3 REQUIRED COMPONENTS NumPy)
     if (Python3_NumPy_FOUND)
         message("-- Detected NumPy installation")
     else ()
