Fix issues for Linux Alpine

--- a/src/state/CMakeLists.txt
+++ b/src/state/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake" "${CMAKE_CURRENT_SOURCE_DIR}/../../lib/cppfs/cmake")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake")
 
 set(CMAKE_BUILD_TYPE Debug)
 if (MSVC)
@@ -18,7 +18,7 @@ else ()
 endif ()
 
 # cppfs
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/cppfs build_cppfs)
+#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/cppfs build_cppfs)
 
 # spdlog
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/spdlog build_spdlog)
@@ -27,8 +27,8 @@ add_executable(state_loader state_loader.c)
 
 target_include_directories(state_loader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/toml11)
 target_include_directories(state_loader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/spdlog/include)
-target_include_directories(state_loader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/cppfs/include)
+#target_include_directories(state_loader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/cppfs/include)
 target_include_directories(state_loader PUBLIC .)
 
 target_link_libraries(state_loader PRIVATE spdlog)
-target_link_libraries(state_loader PRIVATE cppfs)
+#target_link_libraries(state_loader PRIVATE cppfs)
